_infra/k8s/ingress-serv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-serv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: microservices-music.store
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-serv
                port:
                  number: 3000
          # - path: /posts
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: query-serv
          #       port:
          #         number: 8010
          # - path: /posts/?(.*)/comments # no :id syntax so use regex wildcard
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: comments-serv
          #       port:
          #         number: 8001
          # - path: /?(.*) # match any other path
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: client-serv
          #       port:
          #         number: 3000
